# bae

./: .gitignore  .gitmodules  CLAUDE.md  CUE_FLAC_DEBUG_STATUS.md  Cargo.toml  README.md  bae.code-workspace  storage-roadmap.md
bae-core/: Cargo.toml  build.rs
bae-demo/: package-lock.json  package.json
bae-desktop/: Cargo.toml  Dioxus.toml  build.rs  tailwind.css
bae-desktop/assets/: tailwind.css
bae-desktop/scripts/: bundle_dylibs.sh  generate_cue_flac_fixture.sh
bae-desktop/src/: main.rs  media_controls.rs  updater.rs
bae-desktop/src/ui/: app.rs  app_context.rs  app_service.rs  display_types.rs  import_helpers.rs  local_file_url.rs  mod.rs  shortcuts.rs  window_activation.rs
bae-desktop/src/ui/components/: active_imports_context.rs  app.rs  imports_button.rs  imports_dropdown.rs  library.rs  library_search_context.rs  mod.rs  navbar.rs  now_playing_bar.rs  playback_hooks.rs  queue_sidebar.rs  title_bar.rs  update_indicator.rs
bae-desktop/src/ui/components/album_detail/: page.rs  utils.rs
bae-desktop/src/ui/components/import/workflow/: cd_import.rs  file_list.rs  folder_import.rs  mod.rs  page.rs  torrent_import.rs
bae-desktop/src/ui/components/import/workflow/shared/: confirmation.rs
bae-desktop/src/ui/components/settings/: about.rs  api_keys.rs  bittorrent.rs  encryption.rs  storage_profiles.rs  subsonic.rs
bae-desktop/src/ui/import_context/: detection.rs  import.rs  navigation.rs  search.rs  state.rs
bae-desktop/src/ui/window_activation/: macos_window.rs
bae-mocks/: Cargo.toml  tailwind.css
bae-ui/: Cargo.toml  palette.css
(+338 files in other folders)
